--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -20,7 +20,7 @@ jobs:
       run: cargo build --verbose
     - name: Run tests
       run: cargo test --verbose
-    - name: Build float
-      run: cargo build --verbose --features float
-    - name: Run tests float
-      run: cargo test --verbose  --features float
+    # - name: Build float
+    #   run: cargo build --verbose --features float
+    # - name: Run tests float
+    #   run: cargo test --verbose  --features float
