--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,11 +8,13 @@ edition = "2018"
 
 [dependencies]
 geometry3d = { git = "https://github.com/SIMPLE-BuildingSimulation/geometry3d.git" }
+calendar = { git = "https://github.com/SIMPLE-BuildingSimulation/calendar.git" }
+matrix = { git = "https://github.com/SIMPLE-BuildingSimulation/matrix.git" }
+weather = {git = "https://github.com/SIMPLE-BuildingSimulation/weather.git" }
 
 [dev-dependencies]
-calendar = { git = "https://github.com/SIMPLE-BuildingSimulation/calendar.git" }
 
 
 [features]
 default = []
-float = ["geometry3d/float"]
+float = ["geometry3d/float", "calendar/float", "matrix/float"]
