--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 
 [dependencies]
 geometry3d = { git = "https://github.com/SIMPLE-BuildingSimulation/geometry3d.git" }
+# geometry3d = {path="../geometry3d"}
 calendar = { git = "https://github.com/SIMPLE-BuildingSimulation/calendar.git" }
 matrix = { git = "https://github.com/SIMPLE-BuildingSimulation/matrix.git" }
 weather = {git = "https://github.com/SIMPLE-BuildingSimulation/weather.git" }
