--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -19,7 +19,7 @@ jobs:
     - name: Build doc
       run: RUSTDOCFLAGS="--html-in-header katex.html" cargo doc --document-private-items --no-deps
     - name: Set Index
-      run: echo '<meta http-equiv=refresh content=0;url=simple_model/index.html>' > target/doc/index.html
+      run: echo '<meta http-equiv=refresh content=0;url=solar/index.html>' > target/doc/index.html
     - name: Deploy
       uses: JamesIves/github-pages-deploy-action@4.1.5
       with:
