--- a/.github/workflows/coverage.yaml
+++ b/.github/workflows/coverage.yaml
@@ -10,7 +10,11 @@ jobs:
       image: xd009642/tarpaulin
       options: --security-opt seccomp=unconfined
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
+      - name: Set Toolchain
+        run: rustup default nightly    
+      - name: Update
+        run: rustup update 
       - name: Generate code coverage
         run: |
           cargo tarpaulin --verbose --timeout 120 --out Xml
