--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -12,12 +12,20 @@ jobs:
   build:
     runs-on: ubuntu-latest    
     steps:
-    - uses: actions/checkout@v1   
+    - uses: actions/checkout@v3
+    - name: Set Toolchain
+      run: rustup default nightly    
+    - name: Update
+      run: rustup update 
     - name: Build
       run: cargo build --verbose
   build_float:    
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v1   
+    - uses: actions/checkout@v3
+    - name: Set Toolchain
+      run: rustup default nightly    
+    - name: Update
+      run: rustup update    
     - name: Build Float
       run: cargo build --verbose --features float 
