--- a/.github/workflows/style.yaml
+++ b/.github/workflows/style.yaml
@@ -4,7 +4,11 @@ jobs:
   clippy_check:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v3
+      - name: Set Toolchain
+        run: rustup default nightly    
+      - name: Update
+        run: rustup update 
       - run: rustup component add clippy
       - uses: actions-rs/clippy-check@v1
         with:
