--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -13,7 +13,11 @@ jobs:
   test:
     runs-on: ubuntu-latest     
     steps:
-    - uses: actions/checkout@v1   
+    - uses: actions/checkout@v3
+    - name: Set Toolchain
+      run: rustup default nightly    
+    - name: Update
+      run: rustup update    
     - name: Run tests
       run: cargo test --verbose     
   
